--- a/main/css/style2.css
+++ b/main/css/style2.css
@@ -57,6 +57,7 @@
 .a3 {
   grid-area: a3;
   position: relative;
+  transition: all 3s ease;
 }
 .a3 .a3box,
 .b2 .b2box,
@@ -67,6 +68,7 @@
   padding: 1vw;
   display: inline-block;
   pointer-events: none;
+  transition: all 3s ease;
 }
 .a3 h3,
 .b2 h3,
@@ -76,6 +78,7 @@
   font-size: 2vw;
   font-weight: 300;
   text-transform: uppercase;
+  transition: all 3s ease;
 }
 .a3 span,
 .b2 span,
@@ -86,6 +89,7 @@
   float: right;
   margin-top: 0.5vw;
   font-size: 0.85vw;
+  transition: all 3s ease;
 }
 .a3 p,
 .b2 p,
@@ -95,6 +99,7 @@
   font-family: "ChosunNm";
   line-height: 1.6;
   font-size: 0.9vw;
+  transition: all 2s;
 }
 .a3 ol,
 .b2 ol,
@@ -233,174 +238,4 @@
 }
 .d4 a {
   padding: 0.3vw;
-}
-@media (max-width: 992px) {
-  .a3 ol,
-  .b2 ol,
-  .c1 ol {
-    display: none;
-  }
-  .a3 h3,
-  .b2 h3,
-  .c1 h3,
-  .d3 h3 {
-    font-size: 3.5vw;
-  }
-  .a3 span,
-  .b2 span,
-  .c1 span,
-  .d3 span {
-    display: none;
-  }
-  .a3 p,
-  .b2 p,
-  .c1 p,
-  .d3 p {
-    margin-top: 0.7vw;
-    font-size: 1.6vw;
-  }
-  .c4 p {
-    font-size: 1.5vw;
-  }
-  .a3 .a3box,
-  .b2 .b2box,
-  .c1 .c1box,
-  .d3 .d3box {
-    pointer-events: auto;
-  }
-  .d3 .d3a {
-    display: none;
-  }
-}
-@media (max-width: 768px) {
-  #port__wrap {
-    width: 100vw;
-    height: 100vh;
-    background: #fff;
-    display: grid;
-    grid-template-areas:
-      "c3 c4"
-      "a3 b2"
-      "c1 b3"
-      "d3 b3";
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 25% 25% 25% 25%;
-    overflow: hidden;
-  }
-  .b3 h1 {
-    writing-mode: vertical-lr;
-    font-size: 9vw;
-  }
-  .a3 .a3box,
-  .b2 .b2box,
-  .c1 .c1box,
-  .d3 .d3box {
-    pointer-events: auto;
-  }
-  .a3 ol,
-  .b2 ol,
-  .c1 ol {
-    display: block;
-  }
-  .a3 ol li .a3a,
-  .b2 ol li .b2a,
-  .c1 ol li .c1a {
-    display: inline-block;
-    color: #000;
-    background: #fff;
-    border-radius: 50%;
-    font-size: 2vw;
-    width: 6vw;
-    height: 6vw;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid #000;
-    display: table-cell;
-    transition: all 0.4s ease;
-  }
-  .c4 {
-    padding: 2vw;
-  }
-  .d3 .d3a {
-    font-size: 3.5vw;
-    display: block;
-  }
-  .c4 p {
-    font-size: 2.5vw;
-  }
-  .a3 h3,
-  .b2 h3,
-  .c1 h3,
-  .d3 h3 {
-    font-size: 6vw;
-  }
-  .a3 p,
-  .b2 p,
-  .c1 p,
-  .d3 p {
-    margin-top: 0.5vw;
-    font-size: 2.3vw;
-  }
-}
-@media (max-width: 500px) {
-  #port__wrap {
-    width: 100vw;
-    height: 100vh;
-    background: #fff;
-    display: grid;
-    grid-template-areas:
-      "c3"
-      "a3"
-      "b2"
-      "c1"
-      "d3";
-    grid-template-columns: 100%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    overflow: hidden;
-  }
-  .a3 ol,
-  .b2 ol,
-  .c1 ol {
-    display: none;
-  }
-  .d3 .d3a {
-    display: none;
-  }
-  .a3 h3,
-  .b2 h3,
-  .c1 h3,
-  .d3 h3 {
-    font-size: 10vw;
-  }
-  .a3 p,
-  .b2 p,
-  .c1 p,
-  .d3 p {
-    margin-top: 1vw;
-    font-size: 4vw;
-  }
-  .a3:hover h3,
-  .b2:hover h3,
-  .c1:hover h3,
-  .d3:hover h3 {
-    color: #fff;
-  }
-  .a3:hover p,
-  .b2:hover p,
-  .c1:hover p,
-  .d3:hover p {
-    color: #fff;
-  }
-  .a3box,
-  .b2box,
-  .c1box,
-  .d3box {
-    transition: all 0.4s ease;
-  }
-  .a3:hover .a3box,
-  .b2:hover .b2box,
-  .c1:hover .c1box,
-  .d3:hover .d3box {
-    background: #000;
-  }
 }
