--- a/main/css/style3.css
+++ b/main/css/style3.css
@@ -44,7 +44,7 @@
   content: "";
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background: #000;
@@ -128,10 +128,10 @@
   padding: 10px;
 }
 .p20 {
-  padding: 10px;
+  padding: 20px;
 }
 .p30 {
-  padding: 10px;
+  padding: 30px;
 }
 #section h1 {
   font-size: 7vw;
