--- a/effect/css/style.css
+++ b/effect/css/style.css
@@ -16,7 +16,11 @@
   grid-template-rows: 25% 25% 25% 25%;
   overflow: hidden;
   gap: 1px;
-  transition: background 1.5s 0.5s;
+  transition: background 0.7s 0.5s;
+  pointer-events: none;
+}
+#effect.btnon {
+  pointer-events: auto;
 }
 #effect.load {
   background: #d6d6d6;
@@ -25,7 +29,7 @@
   background: #000;
 }
 #effect.close {
-  animation: close 1.5s 2.2s forwards;
+  animation: close 0.7s 1.5s forwards;
 }
 @keyframes close {
   0% {
@@ -48,7 +52,7 @@
   width: 100%;
   height: 100%;
   background: #000;
-  animation: open 1.5s 1.5s forwards;
+  animation: open 0.7s 1s forwards;
 }
 #effect > div.active::after {
   content: "";
@@ -58,7 +62,7 @@
   width: 100%;
   height: 100%;
   background: #000;
-  animation: bye 1.5s forwards;
+  animation: bye 0.7s forwards;
 }
 @keyframes bye {
   0% {
@@ -156,7 +160,7 @@
   left: 20px;
   top: 20px;
   opacity: 0;
-  animation: start 0.3s 2.7s forwards;
+  animation: start 0.3s 1.6s forwards;
 }
 @keyframes start {
   0% {
@@ -167,27 +171,26 @@
   }
 }
 .pagenum a {
-  display: inline-block;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  font-weight: 700;
-  text-align: center;
-  line-height: 36px;
-  border: 3px solid #000;
+  margin-right: 6px;
+  transition: all 0.5s ease;
 }
-.pagenum a:hover {
-  background: #000;
-  color: #fff;
+.pagenum a:nth-child(1):hover .w1,
+.pagenum a:nth-child(3):hover .w3 {
+  display: none;
+}
+.pagenum a:nth-child(1):hover .b1,
+.pagenum a:nth-child(3):hover .b3 {
+  display: inline-block;
+}
+.b1,
+.w2,
+.b3 {
+  display: none;
 }
 #effect h1 {
   font-size: 7vw;
   text-transform: uppercase;
   font-weight: 700;
-}
-.now {
-  background: #000;
-  color: #fff;
 }
 .lh_1 {
   line-height: 1;
