--- a/react/css/style.css
+++ b/react/css/style.css
@@ -63,6 +63,7 @@
   height: 100%;
   background: #000;
   animation: bye 0.7s forwards;
+  z-index: 9999;
 }
 @keyframes bye {
   0% {
@@ -181,8 +182,9 @@
   font-size: 7vw;
   text-transform: uppercase;
   font-weight: 700;
+  line-height: 0.5;
+  margin-left: -6px;
 }
-
 .lh_1 {
   line-height: 1;
 }
@@ -252,9 +254,8 @@
   height: 100%;
 }
 .desc_image {
-  width: 40vw;
+  width: 100%;
   height: 22.5vw;
-  margin: 1vw 4vw;
   border: 1px solid #cdcdcd;
 }
 .desc_image2 {
@@ -297,7 +298,7 @@
   padding: 0 1vw;
 }
 #react h3 {
-  text-align: center;
   font-weight: 300;
   font-size: 2.6vw;
+  text-transform: uppercase;
 }
